
noinst_LIBRARIES=libheretic.a

SOURCE_FILES=                                        \
                       am_data.h                     \
am_map.c               am_map.h                      \
ct_chat.c              ct_chat.h                     \
d_main.c                                             \
d_net.c                                              \
                       doomdata.h                    \
                       doomdef.h                     \
                       dstrings.h                    \
f_finale.c                                           \
g_game.c                                             \
                       i_header.h                    \
info.c                 info.h                        \
in_lude.c                                            \
m_misc.c                                             \
mn_menu.c                                            \
p_ceilng.c                                           \
p_doors.c                                            \
p_enemy.c                                            \
p_floor.c                                            \
p_inter.c                                            \
p_lights.c                                           \
p_local.h                                            \
p_map.c                                              \
p_maputl.c                                           \
p_mobj.c                                             \
p_plats.c                                            \
p_pspr.c                                             \
p_setup.c                                            \
p_sight.c                                            \
p_spec.c               p_spec.h                      \
p_switch.c                                           \
p_telept.c                                           \
p_tick.c                                             \
p_user.c                                             \
r_bsp.c                                              \
r_data.c                                             \
r_draw.c                                             \
                       r_local.h                     \
r_main.c                                             \
r_plane.c                                            \
r_segs.c                                             \
r_things.c                                           \
sb_bar.c                                             \
sounds.c               sounds.h                      \
                       soundst.h                     \
v_video.c                                            \
w_wad.c                                              

EXTRA_DIST=                                          \
i_sound.c              i_sound.h                     \
i_cyber.c                                            \
i_ibm.c   

libheretic_a_SOURCES=$(SOURCE_FILES)
libheretic_a_CFLAGS=-I..

